parser/Parserv1_old/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> update_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     update_statement -> UPDATE ID SET set_clause_list EOL
Rule 5     update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL
Rule 6     select_statement -> SELECT select_columns FROM id_list EOL
Rule 7     select_statement -> SELECT select_columns FROM id_list join_clause EOL
Rule 8     select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL
Rule 9     select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
Rule 10    delete_statement -> DELETE FROM ID EOL
Rule 11    delete_statement -> DELETE FROM ID WHERE search_condition EOL
Rule 12    select_columns -> ALL
Rule 13    select_columns -> id_list
Rule 14    set_clause_list -> id_list EQ literal
Rule 15    set_clause_list -> id_list EQ literal COMMA set_clause_list
Rule 16    join_clause -> NATURAL JOIN ID
Rule 17    join_clause -> NATURAL JOIN ID join_clause
Rule 18    join_clause -> JOIN ID ON ID EQ ID
Rule 19    join_clause -> JOIN ID ON ID EQ ID join_clause
Rule 20    join_clause -> JOIN ID ON ID EQ ID join_search_condition
Rule 21    join_clause -> JOIN ID ON ID DOT ID EQ ID DOT ID
Rule 22    join_clause -> JOIN ID ON ID DOT ID EQ ID DOT ID join_clause
Rule 23    join_clause -> JOIN ID ON ID DOT ID EQ ID DOT ID join_search_condition
Rule 24    join_search_condition -> AND join_search_condition
Rule 25    join_search_condition -> OR join_search_condition
Rule 26    join_search_condition -> LPAREN join_search_condition RPAREN
Rule 27    join_search_condition -> comparison_predicate
Rule 28    search_condition -> search_condition OR search_condition
Rule 29    search_condition -> search_condition AND search_condition
Rule 30    search_condition -> LPAREN search_condition RPAREN
Rule 31    search_condition -> comparison_predicate
Rule 32    comparison_predicate -> value comp_op value
Rule 33    comp_op -> EQ
Rule 34    comp_op -> NEQ
Rule 35    comp_op -> GT
Rule 36    comp_op -> LT
Rule 37    id_list -> ID
Rule 38    id_list -> id_list COMMA ID
Rule 39    value -> ID
Rule 40    value -> literal
Rule 41    literal -> INT
Rule 42    literal -> DOUBLE
Rule 43    literal -> STRING

Terminals, with rules where they appear

ALL                  : 12
AND                  : 24 29
COMMA                : 15 38
DELETE               : 10 11
DOT                  : 21 21 22 22 23 23
DOUBLE               : 42
EOL                  : 4 5 6 7 8 9 10 11
EQ                   : 14 15 18 19 20 21 22 23 33
FROM                 : 6 7 8 9 10 11
GT                   : 35
ID                   : 4 5 10 11 16 17 18 18 18 19 19 19 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 37 38 39
INT                  : 41
JOIN                 : 16 17 18 19 20 21 22 23
LPAREN               : 26 30
LT                   : 36
NATURAL              : 16 17
NEQ                  : 34
ON                   : 18 19 20 21 22 23
OR                   : 25 28
RPAREN               : 26 30
SELECT               : 6 7 8 9
SET                  : 4 5
STRING               : 43
UPDATE               : 4 5
WHERE                : 5 8 9 11
error                : 

Nonterminals, with rules where they appear

comp_op              : 32
comparison_predicate : 27 31
delete_statement     : 3
id_list              : 6 7 8 9 13 14 15 38
join_clause          : 7 9 17 19 22
join_search_condition : 20 23 24 25 26
literal              : 14 15 40
search_condition     : 5 8 9 11 28 28 29 29 30
select_columns       : 6 7 8 9
select_statement     : 2
set_clause_list      : 4 5 15
statement            : 0
update_statement     : 1
value                : 32 32

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . update_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) update_statement -> . UPDATE ID SET set_clause_list EOL
    (5) update_statement -> . UPDATE ID SET set_clause_list WHERE search_condition EOL
    (6) select_statement -> . SELECT select_columns FROM id_list EOL
    (7) select_statement -> . SELECT select_columns FROM id_list join_clause EOL
    (8) select_statement -> . SELECT select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
    (10) delete_statement -> . DELETE FROM ID EOL
    (11) delete_statement -> . DELETE FROM ID WHERE search_condition EOL

    UPDATE          shift and go to state 2
    SELECT          shift and go to state 7
    DELETE          shift and go to state 6

    statement                      shift and go to state 1
    update_statement               shift and go to state 5
    select_statement               shift and go to state 3
    delete_statement               shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (4) update_statement -> UPDATE . ID SET set_clause_list EOL
    (5) update_statement -> UPDATE . ID SET set_clause_list WHERE search_condition EOL

    ID              shift and go to state 8


state 3

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 4

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 5

    (1) statement -> update_statement .

    $end            reduce using rule 1 (statement -> update_statement .)


state 6

    (10) delete_statement -> DELETE . FROM ID EOL
    (11) delete_statement -> DELETE . FROM ID WHERE search_condition EOL

    FROM            shift and go to state 9


state 7

    (6) select_statement -> SELECT . select_columns FROM id_list EOL
    (7) select_statement -> SELECT . select_columns FROM id_list join_clause EOL
    (8) select_statement -> SELECT . select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition EOL
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (37) id_list -> . ID
    (38) id_list -> . id_list COMMA ID

    ALL             shift and go to state 12
    ID              shift and go to state 13

    id_list                        shift and go to state 10
    select_columns                 shift and go to state 11

state 8

    (4) update_statement -> UPDATE ID . SET set_clause_list EOL
    (5) update_statement -> UPDATE ID . SET set_clause_list WHERE search_condition EOL

    SET             shift and go to state 14


state 9

    (10) delete_statement -> DELETE FROM . ID EOL
    (11) delete_statement -> DELETE FROM . ID WHERE search_condition EOL

    ID              shift and go to state 15


state 10

    (13) select_columns -> id_list .
    (38) id_list -> id_list . COMMA ID

    FROM            reduce using rule 13 (select_columns -> id_list .)
    COMMA           shift and go to state 16


state 11

    (6) select_statement -> SELECT select_columns . FROM id_list EOL
    (7) select_statement -> SELECT select_columns . FROM id_list join_clause EOL
    (8) select_statement -> SELECT select_columns . FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns . FROM id_list join_clause WHERE search_condition EOL

    FROM            shift and go to state 17


state 12

    (12) select_columns -> ALL .

    FROM            reduce using rule 12 (select_columns -> ALL .)


state 13

    (37) id_list -> ID .

    EQ              reduce using rule 37 (id_list -> ID .)
    COMMA           reduce using rule 37 (id_list -> ID .)
    FROM            reduce using rule 37 (id_list -> ID .)
    EOL             reduce using rule 37 (id_list -> ID .)
    WHERE           reduce using rule 37 (id_list -> ID .)
    NATURAL         reduce using rule 37 (id_list -> ID .)
    JOIN            reduce using rule 37 (id_list -> ID .)


state 14

    (4) update_statement -> UPDATE ID SET . set_clause_list EOL
    (5) update_statement -> UPDATE ID SET . set_clause_list WHERE search_condition EOL
    (14) set_clause_list -> . id_list EQ literal
    (15) set_clause_list -> . id_list EQ literal COMMA set_clause_list
    (37) id_list -> . ID
    (38) id_list -> . id_list COMMA ID

    ID              shift and go to state 13

    id_list                        shift and go to state 18
    set_clause_list                shift and go to state 19

state 15

    (10) delete_statement -> DELETE FROM ID . EOL
    (11) delete_statement -> DELETE FROM ID . WHERE search_condition EOL

    EOL             shift and go to state 21
    WHERE           shift and go to state 20


state 16

    (38) id_list -> id_list COMMA . ID

    ID              shift and go to state 22


state 17

    (6) select_statement -> SELECT select_columns FROM . id_list EOL
    (7) select_statement -> SELECT select_columns FROM . id_list join_clause EOL
    (8) select_statement -> SELECT select_columns FROM . id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM . id_list join_clause WHERE search_condition EOL
    (37) id_list -> . ID
    (38) id_list -> . id_list COMMA ID

    ID              shift and go to state 13

    id_list                        shift and go to state 23

state 18

    (14) set_clause_list -> id_list . EQ literal
    (15) set_clause_list -> id_list . EQ literal COMMA set_clause_list
    (38) id_list -> id_list . COMMA ID

    EQ              shift and go to state 24
    COMMA           shift and go to state 16


state 19

    (4) update_statement -> UPDATE ID SET set_clause_list . EOL
    (5) update_statement -> UPDATE ID SET set_clause_list . WHERE search_condition EOL

    EOL             shift and go to state 25
    WHERE           shift and go to state 26


state 20

    (11) delete_statement -> DELETE FROM ID WHERE . search_condition EOL
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    comparison_predicate           shift and go to state 31
    search_condition               shift and go to state 27
    value                          shift and go to state 28
    literal                        shift and go to state 29

state 21

    (10) delete_statement -> DELETE FROM ID EOL .

    $end            reduce using rule 10 (delete_statement -> DELETE FROM ID EOL .)


state 22

    (38) id_list -> id_list COMMA ID .

    EQ              reduce using rule 38 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 38 (id_list -> id_list COMMA ID .)
    FROM            reduce using rule 38 (id_list -> id_list COMMA ID .)
    EOL             reduce using rule 38 (id_list -> id_list COMMA ID .)
    WHERE           reduce using rule 38 (id_list -> id_list COMMA ID .)
    NATURAL         reduce using rule 38 (id_list -> id_list COMMA ID .)
    JOIN            reduce using rule 38 (id_list -> id_list COMMA ID .)


state 23

    (6) select_statement -> SELECT select_columns FROM id_list . EOL
    (7) select_statement -> SELECT select_columns FROM id_list . join_clause EOL
    (8) select_statement -> SELECT select_columns FROM id_list . WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM id_list . join_clause WHERE search_condition EOL
    (38) id_list -> id_list . COMMA ID
    (16) join_clause -> . NATURAL JOIN ID
    (17) join_clause -> . NATURAL JOIN ID join_clause
    (18) join_clause -> . JOIN ID ON ID EQ ID
    (19) join_clause -> . JOIN ID ON ID EQ ID join_clause
    (20) join_clause -> . JOIN ID ON ID EQ ID join_search_condition
    (21) join_clause -> . JOIN ID ON ID DOT ID EQ ID DOT ID
    (22) join_clause -> . JOIN ID ON ID DOT ID EQ ID DOT ID join_clause
    (23) join_clause -> . JOIN ID ON ID DOT ID EQ ID DOT ID join_search_condition

    EOL             shift and go to state 40
    WHERE           shift and go to state 37
    COMMA           shift and go to state 16
    NATURAL         shift and go to state 38
    JOIN            shift and go to state 39

    join_clause                    shift and go to state 36

state 24

    (14) set_clause_list -> id_list EQ . literal
    (15) set_clause_list -> id_list EQ . literal COMMA set_clause_list
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    literal                        shift and go to state 41

state 25

    (4) update_statement -> UPDATE ID SET set_clause_list EOL .

    $end            reduce using rule 4 (update_statement -> UPDATE ID SET set_clause_list EOL .)


state 26

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE . search_condition EOL
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    search_condition               shift and go to state 42
    value                          shift and go to state 28
    literal                        shift and go to state 29
    comparison_predicate           shift and go to state 31

state 27

    (11) delete_statement -> DELETE FROM ID WHERE search_condition . EOL
    (28) search_condition -> search_condition . OR search_condition
    (29) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 45
    OR              shift and go to state 43
    AND             shift and go to state 44


state 28

    (32) comparison_predicate -> value . comp_op value
    (33) comp_op -> . EQ
    (34) comp_op -> . NEQ
    (35) comp_op -> . GT
    (36) comp_op -> . LT

    EQ              shift and go to state 46
    NEQ             shift and go to state 48
    GT              shift and go to state 49
    LT              shift and go to state 47

    comp_op                        shift and go to state 50

state 29

    (40) value -> literal .

    EQ              reduce using rule 40 (value -> literal .)
    NEQ             reduce using rule 40 (value -> literal .)
    GT              reduce using rule 40 (value -> literal .)
    LT              reduce using rule 40 (value -> literal .)
    EOL             reduce using rule 40 (value -> literal .)
    OR              reduce using rule 40 (value -> literal .)
    AND             reduce using rule 40 (value -> literal .)
    RPAREN          reduce using rule 40 (value -> literal .)
    WHERE           reduce using rule 40 (value -> literal .)


state 30

    (43) literal -> STRING .

    EQ              reduce using rule 43 (literal -> STRING .)
    NEQ             reduce using rule 43 (literal -> STRING .)
    GT              reduce using rule 43 (literal -> STRING .)
    LT              reduce using rule 43 (literal -> STRING .)
    EOL             reduce using rule 43 (literal -> STRING .)
    OR              reduce using rule 43 (literal -> STRING .)
    AND             reduce using rule 43 (literal -> STRING .)
    RPAREN          reduce using rule 43 (literal -> STRING .)
    WHERE           reduce using rule 43 (literal -> STRING .)
    COMMA           reduce using rule 43 (literal -> STRING .)


state 31

    (31) search_condition -> comparison_predicate .

    RPAREN          reduce using rule 31 (search_condition -> comparison_predicate .)
    OR              reduce using rule 31 (search_condition -> comparison_predicate .)
    AND             reduce using rule 31 (search_condition -> comparison_predicate .)
    EOL             reduce using rule 31 (search_condition -> comparison_predicate .)


state 32

    (30) search_condition -> LPAREN . search_condition RPAREN
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    comparison_predicate           shift and go to state 31
    search_condition               shift and go to state 51
    value                          shift and go to state 28
    literal                        shift and go to state 29

state 33

    (41) literal -> INT .

    EQ              reduce using rule 41 (literal -> INT .)
    NEQ             reduce using rule 41 (literal -> INT .)
    GT              reduce using rule 41 (literal -> INT .)
    LT              reduce using rule 41 (literal -> INT .)
    EOL             reduce using rule 41 (literal -> INT .)
    OR              reduce using rule 41 (literal -> INT .)
    AND             reduce using rule 41 (literal -> INT .)
    RPAREN          reduce using rule 41 (literal -> INT .)
    WHERE           reduce using rule 41 (literal -> INT .)
    COMMA           reduce using rule 41 (literal -> INT .)


state 34

    (39) value -> ID .

    EQ              reduce using rule 39 (value -> ID .)
    NEQ             reduce using rule 39 (value -> ID .)
    GT              reduce using rule 39 (value -> ID .)
    LT              reduce using rule 39 (value -> ID .)
    EOL             reduce using rule 39 (value -> ID .)
    OR              reduce using rule 39 (value -> ID .)
    AND             reduce using rule 39 (value -> ID .)
    RPAREN          reduce using rule 39 (value -> ID .)
    WHERE           reduce using rule 39 (value -> ID .)


state 35

    (42) literal -> DOUBLE .

    EQ              reduce using rule 42 (literal -> DOUBLE .)
    NEQ             reduce using rule 42 (literal -> DOUBLE .)
    GT              reduce using rule 42 (literal -> DOUBLE .)
    LT              reduce using rule 42 (literal -> DOUBLE .)
    EOL             reduce using rule 42 (literal -> DOUBLE .)
    OR              reduce using rule 42 (literal -> DOUBLE .)
    AND             reduce using rule 42 (literal -> DOUBLE .)
    RPAREN          reduce using rule 42 (literal -> DOUBLE .)
    WHERE           reduce using rule 42 (literal -> DOUBLE .)
    COMMA           reduce using rule 42 (literal -> DOUBLE .)


state 36

    (7) select_statement -> SELECT select_columns FROM id_list join_clause . EOL
    (9) select_statement -> SELECT select_columns FROM id_list join_clause . WHERE search_condition EOL

    EOL             shift and go to state 52
    WHERE           shift and go to state 53


state 37

    (8) select_statement -> SELECT select_columns FROM id_list WHERE . search_condition EOL
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    search_condition               shift and go to state 54
    value                          shift and go to state 28
    literal                        shift and go to state 29
    comparison_predicate           shift and go to state 31

state 38

    (16) join_clause -> NATURAL . JOIN ID
    (17) join_clause -> NATURAL . JOIN ID join_clause

    JOIN            shift and go to state 55


state 39

    (18) join_clause -> JOIN . ID ON ID EQ ID
    (19) join_clause -> JOIN . ID ON ID EQ ID join_clause
    (20) join_clause -> JOIN . ID ON ID EQ ID join_search_condition
    (21) join_clause -> JOIN . ID ON ID DOT ID EQ ID DOT ID
    (22) join_clause -> JOIN . ID ON ID DOT ID EQ ID DOT ID join_clause
    (23) join_clause -> JOIN . ID ON ID DOT ID EQ ID DOT ID join_search_condition

    ID              shift and go to state 56


state 40

    (6) select_statement -> SELECT select_columns FROM id_list EOL .

    $end            reduce using rule 6 (select_statement -> SELECT select_columns FROM id_list EOL .)


state 41

    (14) set_clause_list -> id_list EQ literal .
    (15) set_clause_list -> id_list EQ literal . COMMA set_clause_list

    EOL             reduce using rule 14 (set_clause_list -> id_list EQ literal .)
    WHERE           reduce using rule 14 (set_clause_list -> id_list EQ literal .)
    COMMA           shift and go to state 57


state 42

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE search_condition . EOL
    (28) search_condition -> search_condition . OR search_condition
    (29) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 58
    OR              shift and go to state 43
    AND             shift and go to state 44


state 43

    (28) search_condition -> search_condition OR . search_condition
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    comparison_predicate           shift and go to state 31
    search_condition               shift and go to state 59
    value                          shift and go to state 28
    literal                        shift and go to state 29

state 44

    (29) search_condition -> search_condition AND . search_condition
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    comparison_predicate           shift and go to state 31
    search_condition               shift and go to state 60
    value                          shift and go to state 28
    literal                        shift and go to state 29

state 45

    (11) delete_statement -> DELETE FROM ID WHERE search_condition EOL .

    $end            reduce using rule 11 (delete_statement -> DELETE FROM ID WHERE search_condition EOL .)


state 46

    (33) comp_op -> EQ .

    ID              reduce using rule 33 (comp_op -> EQ .)
    INT             reduce using rule 33 (comp_op -> EQ .)
    DOUBLE          reduce using rule 33 (comp_op -> EQ .)
    STRING          reduce using rule 33 (comp_op -> EQ .)


state 47

    (36) comp_op -> LT .

    ID              reduce using rule 36 (comp_op -> LT .)
    INT             reduce using rule 36 (comp_op -> LT .)
    DOUBLE          reduce using rule 36 (comp_op -> LT .)
    STRING          reduce using rule 36 (comp_op -> LT .)


state 48

    (34) comp_op -> NEQ .

    ID              reduce using rule 34 (comp_op -> NEQ .)
    INT             reduce using rule 34 (comp_op -> NEQ .)
    DOUBLE          reduce using rule 34 (comp_op -> NEQ .)
    STRING          reduce using rule 34 (comp_op -> NEQ .)


state 49

    (35) comp_op -> GT .

    ID              reduce using rule 35 (comp_op -> GT .)
    INT             reduce using rule 35 (comp_op -> GT .)
    DOUBLE          reduce using rule 35 (comp_op -> GT .)
    STRING          reduce using rule 35 (comp_op -> GT .)


state 50

    (32) comparison_predicate -> value comp_op . value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    value                          shift and go to state 61
    literal                        shift and go to state 29

state 51

    (30) search_condition -> LPAREN search_condition . RPAREN
    (28) search_condition -> search_condition . OR search_condition
    (29) search_condition -> search_condition . AND search_condition

    RPAREN          shift and go to state 62
    OR              shift and go to state 43
    AND             shift and go to state 44


state 52

    (7) select_statement -> SELECT select_columns FROM id_list join_clause EOL .

    $end            reduce using rule 7 (select_statement -> SELECT select_columns FROM id_list join_clause EOL .)


state 53

    (9) select_statement -> SELECT select_columns FROM id_list join_clause WHERE . search_condition EOL
    (28) search_condition -> . search_condition OR search_condition
    (29) search_condition -> . search_condition AND search_condition
    (30) search_condition -> . LPAREN search_condition RPAREN
    (31) search_condition -> . comparison_predicate
    (32) comparison_predicate -> . value comp_op value
    (39) value -> . ID
    (40) value -> . literal
    (41) literal -> . INT
    (42) literal -> . DOUBLE
    (43) literal -> . STRING

    LPAREN          shift and go to state 32
    ID              shift and go to state 34
    INT             shift and go to state 33
    DOUBLE          shift and go to state 35
    STRING          shift and go to state 30

    search_condition               shift and go to state 63
    value                          shift and go to state 28
    comparison_predicate           shift and go to state 31
    literal                        shift and go to state 29

state 54

    (8) select_statement -> SELECT select_columns FROM id_list WHERE search_condition . EOL
    (28) search_condition -> search_condition . OR search_condition
    (29) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 64
    OR              shift and go to state 43
    AND             shift and go to state 44


state 55

    (16) join_clause -> NATURAL JOIN . ID
    (17) join_clause -> NATURAL JOIN . ID join_clause

    ID              shift and go to state 65


state 56

    (18) join_clause -> JOIN ID . ON ID EQ ID
    (19) join_clause -> JOIN ID . ON ID EQ ID join_clause
    (20) join_clause -> JOIN ID . ON ID EQ ID join_search_condition
    (21) join_clause -> JOIN ID . ON ID DOT ID EQ ID DOT ID
    (22) join_clause -> JOIN ID . ON ID DOT ID EQ ID DOT ID join_clause
    (23) join_clause -> JOIN ID . ON ID DOT ID EQ ID DOT ID join_search_condition

    ON              shift and go to state 66


state 57

    (15) set_clause_list -> id_list EQ literal COMMA . set_clause_list
    (14) set_clause_list -> . id_list EQ literal
    (15) set_clause_list -> . id_list EQ literal COMMA set_clause_list
    (37) id_list -> . ID
    (38) id_list -> . id_list COMMA ID

    ID              shift and go to state 13

    id_list                        shift and go to state 18
    set_clause_list                shift and go to state 67

state 58

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL .
